welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: illegal start of simple expression
      if (j+i<T.length){setCouleurBrosse(T(j+i));baisseBrosse();leveBrosse()=}} while (estFaceMur==false);
                                                                             ^